// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/switch/demo/basic.md correctly 1`] = `
<span
  class="ant-switch ant-switch-checked"
  tabindex="0"
>
  <span
    class="ant-switch-inner"
  />
</span>
`;

exports[`renders ./components/switch/demo/disabled.md correctly 1`] = `
<div>
  <span
    class="ant-switch ant-switch-checked ant-switch-disabled"
    tabindex="-1"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
  <br />
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Toggle disabled
    </span>
  </button>
</div>
`;

exports[`renders ./components/switch/demo/loading.md correctly 1`] = `
<div>
  <span
    class="ant-switch-loading ant-switch ant-switch-checked"
    tabindex="0"
  >
    <i
      class="anticon anticon-loading ant-switch-loading-icon"
    >
      <svg
        aria-hidden="true"
        class="anticon-spin"
        data-icon="loading"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3-22.2-52.4-53.9-99.4-94.3-139.9-40.4-40.4-87.5-72.2-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </i>
    <span
      class="ant-switch-inner"
    />
  </span>
  <br />
  <span
    class="ant-switch-small ant-switch-loading ant-switch"
    tabindex="0"
  >
    <i
      class="anticon anticon-loading ant-switch-loading-icon"
    >
      <svg
        aria-hidden="true"
        class="anticon-spin"
        data-icon="loading"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3-22.2-52.4-53.9-99.4-94.3-139.9-40.4-40.4-87.5-72.2-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </i>
    <span
      class="ant-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/switch/demo/size.md correctly 1`] = `
<div>
  <span
    class="ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
  <br />
  <span
    class="ant-switch-small ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/switch/demo/text.md correctly 1`] = `
<div>
  <span
    class="ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    >
      开
    </span>
  </span>
  <br />
  <span
    class="ant-switch"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    >
      0
    </span>
  </span>
  <br />
  <span
    class="ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    >
      <i
        class="anticon anticon-check"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="check"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474c-6.1-7.7-15.3-12.2-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;
